--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,12 +1,12 @@
-$body-bg: #222f3e;
+$body-bg: #151d26;
 $main-color: #ff7675;
 $txt-color: #fff;
 
 $box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
-$header-height: 8rem;
-$header-shrink-height: 5rem;
-$border-radius: 30px;
+$header-height: 5rem;
+$header-shrink-height: 4rem;
+$border-radius: 12px;
 $mobile-width: 768px;
 $tablet-width: 1024px;
 
