--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,11 +2,22 @@
 
 .footer {
     position: relative;
-    padding: 6rem 1rem;
-    background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
-
+    padding: 2.4rem 1rem;
+    z-index: 1;
+    
+    &.footer::before {
+        content: "";
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background-image: url(../../assets/footer-background.jpg);
+        background-position: top;
+        background-size: cover;
+        background-repeat: repeat;
+        filter: grayscale(100%) brightness(0.5) blur(1px);
+        z-index: -1;
+    }
+    
     &__content {
         max-width: 820px;
 
@@ -32,7 +43,7 @@
             margin-top: 1.5rem;
             margin-bottom: 1.5rem;
 
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             font-weight: 300;
 
             & > * ~ *  {
