--- a/src/components/hero-slide/hero-slide.scss
+++ b/src/components/hero-slide/hero-slide.scss
@@ -5,7 +5,7 @@
 }
 
 .hero-slide__item {
-    padding: 9rem 0;
+    padding: 7.4rem 0;
     width: 100%;
     position: relative;
     background-position: center;
@@ -29,7 +29,7 @@
         left: 0;
         width: 100%;
         height: 100px;
-        background-image: linear-gradient(to top, $body-bg, rgba(black, 0));
+        background-image: linear-gradient(to top, black, rgba(black, 0));
     }
 
     &__content {
@@ -82,12 +82,14 @@
         }
 
         &__poster {
-            flex: 1;
             @include flex(center, center);
             position: relative;
-
+            
             img {
-                width: 400px;
+                width: 100%;
+                height: auto;
+                max-width: 400px;
+                object-fit: cover;
                 border-radius: $border-radius;
                 box-shadow: $box-shadow;
 
