update modal scss

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,4 +1,4 @@
-@use '../../scss' as *;
+@use "../../scss/" as *;
 
 .modal {
     @include flex(center, center);
@@ -13,18 +13,18 @@
     opacity: 0;
     visibility: hidden;
 
-    &active {
+    &.active {
         opacity: 1;
         visibility: visible;
     }
 
     &__content {
-        padding: 2rem;
-        background-color: $body-bg;
+        padding: 1.5rem 2rem;
+        background-color: #2a2a2a;
         width: 50%;
         opacity: 0;
         transform: translateY(-250px);
-        transition: transform .6s ease, opacity .6s ease;
+        transition: transform 0.6s ease, opacity 0.6s ease;
         position: relative;
 
         @include tablet {
@@ -33,9 +33,9 @@
 
         &__close {
             position: absolute;
-            top: 5px;
-            right: 5px;
-            font-size: 1.5rem;
+            right: 2px;
+            top: 0;
+            font-size: 2rem;
             cursor: pointer;
 
             &:hover {
