--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -12,10 +12,11 @@ button {
     border-radius: 7px;
     padding: .5rem 1.8rem;
     font-size: 1.2rem;
-    font-weight: 600;
+    font-weight: 400;
     box-shadow: 0px 0px 4px 4px #ff757593;
     transition: box-shadow 0.3 ease ;
     position: relative;
+    text-align: center;
 }
 
 .btn:hover {
