--- a/src/components/hero-slide/hero-slide.scss
+++ b/src/components/hero-slide/hero-slide.scss
@@ -12,6 +12,10 @@
     background-size: cover;
     background-repeat: no-repeat;
 
+    @include mobile {
+        height: 450px;
+    }
+
     &::before {
         content: '';
         position: absolute;
