--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
-$body-bg: #161c21;
-$main-color: #ff7675;
+$body-bg: #12161a;
+$main-color: #f54b4b;
 $txt-color: #fff;
 
 $box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
