--- a/src/components/page-header/page-header.scss
+++ b/src/components/page-header/page-header.scss
@@ -3,7 +3,7 @@
 .page-header {
     padding: $header-height 0 2rem;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 
     position: relative;
     background-position: top;
@@ -27,6 +27,10 @@
 
     h2 {
         position: relative;
+        letter-spacing: 4px;
+        font-size: 1.6rem;
+        font-weight: 400;
+
         z-index: 99;
     }
 
