--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -12,16 +12,21 @@
     .btn {
         position: absolute;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: red;
-        width: 80px;
-        height: 50px;
-        border-radius: 30px;
+        width: 90px;
+        height: 90px;
+        border-radius: 50%;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%) scale(0);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+        &:nth-child(1) {
+            font-size: 1rem;
+            font-weight: 400;
+        }
     }
     
     &::before {
